--- a/snowflake/valohai.yaml
+++ b/snowflake/valohai.yaml
@@ -5,3 +5,12 @@
       - cd snowflake
       - pip install snowflake-snowpark-python
       - python -m check_connection
+
+
+- step:
+    name: snowflake-get-current-connection
+    image: python:3.12
+    command:
+      - cd snowflake
+      - pip install snowflake-snowpark-python
+      - python -m get_current_connection
