--- a/snowflake/valohai.yaml
+++ b/snowflake/valohai.yaml
@@ -14,3 +14,12 @@
       - cd snowflake
       - pip install snowflake-snowpark-python
       - python -m get_current_connection
+
+
+- step:
+    name: snowflake-insurance
+    image: python:3.12
+    command:
+      - cd snowflake
+      - pip install snowflake-snowpark-python valohai-utils
+      - python -m insurance
