--- a/snowflake/valohai.yaml
+++ b/snowflake/valohai.yaml
@@ -21,5 +21,5 @@
     image: python:3.12
     command:
       - cd snowflake
-      - pip install snowflake-snowpark-python valohai-utils
+      - pip install snowflake-snowpark-python valohai-utils pandas
       - python -m insurance
