--- a/snowflake/valohai.yaml
+++ b/snowflake/valohai.yaml
@@ -3,7 +3,7 @@
     image: python:3.12
     command:
       - cd snowflake
-      - pip install snowflake-snowpark-python
+      - pip install -r requirements.txt
       - python -m check_connection
 
 
@@ -12,14 +12,50 @@
     image: python:3.12
     command:
       - cd snowflake
-      - pip install snowflake-snowpark-python
+      - pip install -r requirements.txt
       - python -m get_current_connection
 
 
 - step:
-    name: snowflake-insurance
+    name: snowflake-test-insurance-connection
     image: python:3.12
     command:
       - cd snowflake
-      - pip install snowflake-snowpark-python valohai-utils pandas
-      - python -m insurance
+      - pip install -r requirements.txt
+      - python -m test_insurance_connection
+
+- step:
+    name: snowflake-load-insurance-data
+    image: python:3.12
+    command:
+      - cd snowflake
+      - pip install -r requirements.txt
+      - python -m load_insurance_data {parameters}
+    inputs:
+    - name: data_csv
+      optional: false
+    parameters:
+      - name: db_name
+        optional: true
+        type: string
+      - name: schema_name
+        optional: true
+        type: string
+      - name: warehouse_name
+        optional: true
+        type: string
+      - name: role
+        optional: true
+        type: string
+      - name: train_db_name
+        default: SOURCE_OF_TRUTH
+        optional: true
+        type: string
+      - name: incoming_data_db_name
+        default: INCOMING_DATA_SOURCE
+        optional: true
+        type: string
+      - name: train_rows
+        default: 10000
+        optional: true
+        type: integer
