--- a/snowflake/requirements.txt
+++ b/snowflake/requirements.txt
@@ -1,4 +1,6 @@
-pandas==2.3.1
-snowflake-connector-python[pandas]==3.16.0
-snowflake-snowpark-python==1.36.0
-valohai-utils==0.7.0
+pandas
+snowflake-connector-python[pandas]
+snowflake-snowpark-python
+valohai-utils
+snowflake-ml-python
+snowflake-telemetry-python
