--- a/tasks/valohai.yaml
+++ b/tasks/valohai.yaml
@@ -21,3 +21,32 @@
         type: integer
         default: 32
         description: Batch size for training
+
+
+- task:
+    step: Train Iris Model
+    name: train-iris
+    type: RANDOM-SEARCH
+    maximum-queued-executions: 100
+    execution-count: 10
+    on-child-error: stop_all-AND_error
+    reuse-children: true
+    parameters:
+      - name: epochs
+        style: linear
+        rules:
+          end: 100
+          start: 100
+          step: 100
+        
+      - name: learning_rate
+        style: linear
+        rules:
+          end: 0.9
+          start: 0.1
+          step: 0.1
+
+      - name: batch_size
+        style: multiple
+        rules:
+          items: [16, 32, 64, 128]
